# bk-lite

./: .gitignore  .gitmodules  CLAUDE.md  Readme.md  pyproject.toml
agents/ansible-executor/: Makefile  README.md  ansible-executor.spec  build_support.py  config.example.yml  main.py  pyproject.toml
agents/ansible-executor/core/: config.py
agents/ansible-executor/service/: ansible_runner.py  nats_service.py  runtime.py  task_store.py
agents/ansible-executor/support-files/: Dockerfile
agents/ansible-executor/tests/: test_ansible_runner.py  test_nats_service.py  test_task_store.py
agents/stargazer/: pyproject.toml
agents/stargazer/api/: collect.py
agents/stargazer/core/: plugin_executor.py  plugin_source_resolver.py  yaml_reader.py
agents/stargazer/plugins/: script_executor.py
agents/stargazer/service/: collection_service.py
agents/stargazer/support-files/pre-commit/: pre-commit-config.toml
agents/stargazer/tasks/handlers/: plugin_handler.py
agents/stargazer/tasks/utils/: nats_helper.py
algorithms/classify_anomaly_server/: pyproject.toml
algorithms/classify_anomaly_server/classify_anomaly_server/cli/: bootstrap.py
algorithms/classify_anomaly_server/classify_anomaly_server/training/: mlflow_utils.py  trainer.py
algorithms/classify_anomaly_server/support-files/: pelt_train.json.example
algorithms/classify_anomaly_server/support-files/release/: Dockerfile
server/: .gitignore  Makefile  asgi.py  conftest.py  pyproject.toml  pytest_env_setup.py
server/apps/alerts/: apps.py  urls.py
server/apps/alerts/constants/: init_data.py
server/apps/alerts/filters/: event.py
server/apps/alerts/migrations/: 0010_remove_alert_alert_created_btree_and_more.py  0012_event_push_source_id_alter_event_source.py
server/apps/alerts/models/: models.py
server/apps/alerts/nats/: nats.py
server/apps/alerts/serializers/: alert.py  alert_source.py
server/apps/alerts/service/: k8s_install.py
server/apps/alerts/test/: mock.py  tests.py
server/apps/alerts/views/: __init__.py  alert.py  alert_source.py  open_api_k8s.py  receiver.py
server/apps/base/tests/: conftest.py  factories.py
server/apps/base/user_api_secret_mgmt/: serializers.py  views.py
server/apps/cmdb/: tests.py  urls.py
server/apps/cmdb/collection/: CMDB配置采集插件开发指南.md  common.py
server/apps/cmdb/constants/: constants.py
server/apps/cmdb/graph/: falkordb.py  neo4j.py
server/apps/cmdb/language/: en.yaml  zh-Hans.yaml
server/apps/cmdb/migrations/: 0017_alter_collectmodels_task_type_configfileversion.py
server/apps/cmdb/model_migrate/: migrete_service.py
server/apps/cmdb/models/: __init__.py  collect_model.py  config_file_version.py
server/apps/cmdb/nats/: nats.py
server/apps/cmdb/node_configs/: __init__.py  base.py  config_factory.py
server/apps/cmdb/serializers/: collect_serializer.py  config_file_serializer.py  subscription.py
server/apps/cmdb/services/: auto_relation_reconcile.py  auto_relation_rule.py  collect_object_tree.py  collect_service.py  config_file_service.py  encrypt_collect_password.py  field_group.py  instance.py  model.py  public_enum_library.py  subscription_trigger.py  unique_rule.py
server/apps/cmdb/support-files/: model_config.xlsx
server/apps/cmdb/tasks/: celery_tasks.py
server/apps/cmdb/utils/: Import.py  config_file_path.py
server/apps/cmdb/views/: collect.py  config_file.py  field_group.py  mixins.py  model.py
server/apps/console_mgmt/: views.py
server/apps/core/: apps.py  backends.py  celery.py  constants.py  urls.py
server/apps/core/db_patches/: __init__.py  dameng.py  gaussdb.py  goldendb.py  oceanbase.py
server/apps/core/language/: en.yaml  zh-Hans.yaml
server/apps/core/middlewares/: auth_middleware.py  dameng_connection_middleware.py
server/apps/core/utils/: group_query_mixin.py  permission_cache.py  permission_utils.py  user_group.py  viewset_utils.py
server/apps/core/views/: index_view.py
server/apps/job_mgmt/: nats_api.py
server/apps/job_mgmt/constants/: __init__.py  choices.py
server/apps/job_mgmt/migrations/: 0002_target_winrm_transport_and_ssh_key_passphrase.py
server/apps/job_mgmt/models/: target.py
server/apps/job_mgmt/serializers/: target.py
server/apps/job_mgmt/services/: execution_base_service.py  file_distribution_runner.py  playbook_execution.py  script_execution_runner.py
server/apps/job_mgmt/views/: execution.py  playbook.py  target.py
server/apps/log/: log.yaml  urls.py
server/apps/log/constants/: alert_policy.py  collect_type.py  victoriametrics.py
server/apps/log/language/: en.yaml  zh-Hans.yaml
server/apps/log/nats/: log.py
server/apps/log/serializers/: log_group.py  policy.py  search.py
server/apps/log/services/: access_scope.py  collect_type.py  k8s_collect.py  search.py
server/apps/log/tasks/: policy.py
server/apps/log/tests/: test_collect_instance_permission_guards.py  test_collect_instance_search.py  test_collector_logstash_retry_defaults.py  test_query_log.py  test_search_query_limits.py
server/apps/log/utils/: log_group.py  query_log.py
server/apps/log/views/: collect_config.py  k8s_collect.py  log_group.py  open_api_k8s.py  policy.py  search.py  system_mgmt.py
server/apps/mlops/utils/: mlflow_service.py  webhook_client.py
server/apps/mlops/views/: anomaly_detection.py  base.py  classification.py  image_classification.py  (+3 more)
server/apps/monitor/: urls.py
server/apps/node_mgmt/: apps.py  signals.py
server/apps/operation_analysis/: urls.py
server/apps/opspilot/: enum.py  tasks.py  urls.py  views.py
server/apps/rpc/: ansible.py  cmdb.py  executor.py  log.py  monitor.py  node_mgmt.py  system_mgmt.py
server/apps/system_mgmt/: config.py  nats_api.py  tasks.py
server/config/components/: app.py  celery.py  database.py  extra.py  minio.py
server/envs/: .env.example  .env.node.example
server/nats_client/: clients.py
server/scripts/: monitor-manifest.actual-test.yaml  run_monitor_manifest.sh
server/scripts/templates/: mysql_monitor_instance.request.yaml.tpl  mysql_operation_analysis_dashboard.yaml.tpl
server/support-files/release/: Dockerfile  Dockerfile.base
(+1447 files in other folders)
