[project]
name = "ansible-executor"
version = "0.1.0"
description = "NATS RPC Ansible executor service"
requires-python = ">=3.12"
dependencies = [
    "ansible-core==2.18.6",
    "nats-py==2.10.0",
    "pywinrm[credssp]==0.5.0",
    "PyYAML==6.0.2",
    "python-dotenv==1.0.0",
]

[tool.uv]
package = false
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
