[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "core*", "common*", "asserts*", "plugins*", "service*", "monitor*", "utils*"]

[project]
name = "stargazer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarmor==9.0.7",
    "sanic==24.6.0",
    "sanic-ext==23.12.0",
    "prometheus_client==0.21.1",
    "pyarmor==9.0.7",
    "nats-py==2.10.0",
    "python-dotenv==1.0.0",
    "pydantic==2.11.3",
    "IPy==0.83",
    "loguru==0.7.3",
    "importlib-metadata==4.6.1",
    "importlib-resources==5.2.0",
    "xmltodict==0.13.0",
    "boto3>=1.35.0",
    "PyMySQL==1.1.1",
    "oracledb==3.3.0",
    "pyodbc==5.2.0",
    "paramiko==3.5.0",
    "pyghmi>=1.6.5",
    "pytz==2025.2",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "influxdb-client>=1.49.0",
    "psycopg2==2.9.11",
]

[project.optional-dependencies]
dev = [

]

aliyun = [
    "aliyun-python-sdk-cms==7.0.3",
    "aliyun-python-sdk-ecs==4.24.8",
    "aliyun-python-sdk-ram==2.0.7",
    "aliyun-python-sdk-vpc==3.0.10",
    "aliyun-python-sdk-rds==2.5.11",
    "aliyun-python-sdk-nas==3.11.0",
    "aliyun-python-sdk-slb==3.3.8",
    "alibabacloud-domain20180129==3.14.13",
    "alibabacloud_alidns20150109==3.5.0",
    "alibabacloud-cdn20180510==3.3.1",
    "alibabacloud_waf_openapi20211001==3.5.0",
    "alibabacloud_cas20200407==1.3.0",
    "alibabacloud_rds20140815==5.0.2",
    "alibabacloud_r_kvstore20150101==4.1.0",
    "alibabacloud_oss20190517==1.0.6",
    "alibabacloud_dds20151201==7.0.0",
    "alibabacloud_alikafka20190916==2.7.0",
    "alibabacloud_slb20140515==3.3.26",
    "alibabacloud_cs20151215==4.7.0",
    "alibabacloud_vpc20160428==6.7.2",
    "alibabacloud_mse20190531==6.9.0",
    "alibabacloud_alb20200616==1.2.1",
    "alibabacloud_nas20170626==2.4.0",
    "aliyun-python-sdk-core-v3==2.13.32",
    "aliyun-python-sdk-r-kvstore==2.19.0",
    "aliyun-python-sdk-dds==3.5.4",
    "aliyun-python-sdk-bssopenapi==1.7.6",
    "aliyun-python-sdk-rds==2.5.11",
    "oss2==2.18.3",
    "alibabacloud-gateway-oss == 0.0.9",
]

qcloud = [
    "tencentcloud-sdk-python==3.0.948",
    "cos-python-sdk-v5==1.7.8",
]

huawei = [
    "huaweicloudsdkiam>=3.1.183",
    "huaweicloudsdkecs>=3.1.183",
    "huaweicloudsdkbss>=3.1.183",
    "huaweicloudsdkevs>=3.1.183",
    "huaweicloudsdkvpc>=3.1.183",
    "huaweicloudsdkeip>=3.1.183",
    "huaweicloudsdkims>=3.1.183",
    "huaweicloudsdkces>=3.1.183",
    "huaweicloudsdkelb>=3.1.183",
    "huaweicloudsdkrds>=3.1.183",
    "huaweicloudsdkdcs>=3.1.183",
    "huaweicloudsdkdds>=3.1.183",
    "esdk-obs-python>=3.20.11",
]

vmware = [
    "pyvmomi==9.0.0.0",
]

openstack = [
    "python-dateutil==2.8.2",
    "pyrsistent==0.14.0",
    "pbr==5.5.0",
    "keystoneauth1==3.18.0",
    "os-client-config==2.0.0",
    "python-keystoneclient==3.22.0",
    "python-cinderclient==5.0.0",
    "python-mimeparse==1.6.0",
    "python-novaclient==16.0.0",
    "python-neutronclient==6.14.0",
    "python-glanceclient==3.0.0",
    "pandas==2.2.3",
]

qingyun = [
    "qingcloud-sdk==1.2.14",
    "ujson==5.4.0",
]

snmp = [
    "pysnmp==5.1.0",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
]
